--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "final-form": "^4.18.5",
     "final-form-arrays": "^3.0.2",
     "full-icu": "^1.3.1",
+    "handlebars": "^4.5.3",
     "helmet": "^3.21.2",
     "intl-pluralrules": "^1.0.3",
     "lodash": "^4.17.14",
@@ -49,14 +50,16 @@
     "react-moment-proptypes": "^1.6.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
+    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "seedrandom": "^3.0.5",
-    "sharetribe-flex-sdk": "1.11.0",
+    "sharetribe-flex-sdk": "^1.11.0",
     "sharetribe-scripts": "3.1.1",
     "smoothscroll-polyfill": "^0.4.0",
     "source-map-support": "^0.5.9",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "babel-jest": "24.9.0",
@@ -89,7 +92,7 @@
     "config-check": "node scripts/config.js --check",
     "dev-frontend": "sharetribe-scripts start",
     "dev-backend": "nodemon server/apiServer.js",
-    "dev": "yarn run config-check&&export NODE_ENV=development REACT_APP_DEV_API_SERVER_PORT=3500&&concurrently --kill-others \"yarn run dev-frontend\" \"yarn run dev-backend\"",
+    "dev": "yarn run config-check&&set NODE_ENV=development REACT_APP_DEV_API_SERVER_PORT=3500&&concurrently --kill-others \"yarn run dev-frontend\" \"yarn run dev-backend\"",
     "build": "sharetribe-scripts build",
     "format": "prettier --write '**/*.{js,css}'",
     "format-ci": "prettier --list-different '**/*.{js,css}'",
